npr/umami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
spec:
  template:
    spec:
      containers:
        - name: umami
          image: ghcr.io/umami-software/umami:postgresql-v2.15.1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
