npr/umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
